# ConvertLeica-Docker

./: .dockerignore  .gitignore  ConvertLeicaGUI.spec  ConvertLeicaQT.md  ConvertLeicaQT.py  ConvertLeicaQTHelp.html  CreatePreview.py  Dockerfile  MANIFEST.in  ParseLeicaImageXML.py  ParseLeicaImageXMLLite.py  README.md  ReadLeicaLIF.py  Server.md  ci_leica_converters_helpers.py  ci_leica_converters_ometiff.py  ci_leica_converters_ometiff_rgb.py  ci_leica_converters_omezarr.py  ci_leica_converters_single_lif.py  index.html  leica_converter.py  main.py  pyproject.toml  requirements-docker.txt  requirements-qt6ui.txt  requirements-server.txt  server.py
.github/workflows/: publish-to-pypi.yml
Tests/: DockerTests.cmd  conftest.py  test_convertleicaqt_root_selection.py  test_encoding.py  test_extract_nested_leica_items.py  test_no_vips_dependency.py  test_offline_startup.py  test_omezarr_metadata.py  test_parseleica_sp5_metadata.py  test_parseleica_units.py  test_preview_colors.py  test_readleicalif_legacy.py  test_tiled_ome_tiff_sink.py  validate_ometiff.py
cideconvolve_io/: LICENSE  __init__.py  ome_tiff_io.py
convertleica_file_browser/: CreatePreview.py  ParseLeicaImageXML.py  ParseLeicaImageXMLLite.py  ReadLeicaLIF.py  ReadLeicaLOF.py  ReadLeicaXLEF.py  __init__.py  ci_leica_converters_helpers.py
tools/omero_import_metadata_probe/: README.md  omero_import_metadata_probe.py  run.cmd
